--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>projeto redes sociais</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>olá, mundo!</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="sociais">
+
+        </section>
+    </main>
 </body>
 </html>
